<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/cherry_swash"
            android:gravity="center"
            android:shadowColor="@color/colorPrimary"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/none"
            android:src="@drawable/dog_group" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/cherry_swash"
            android:gravity="center"
            android:text="@string/opening_hour"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:text="@string/fill_fields"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:background="@drawable/shape_selector"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:hint="@string/dog_age"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:background="@drawable/shape_selector"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:hint="@string/dog_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:background="@drawable/shape_selector"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:hint="@string/owner_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:background="@drawable/shape_selector"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:hint="@string/owner_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivClock"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_selector"
                        android:clickable="true"
                        android:contentDescription="@string/none"
                        android:focusable="true"
                        android:src="@drawable/clock_icon" />

                    <TextView
                        android:id="@+id/tvClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCalendar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_selector"
                        android:clickable="true"
                        android:contentDescription="@string/none"
                        android:focusable="true"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/tvCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cherry_swash"
                android:gravity="center"
                android:text="@string/photo_and_video"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/shape_selector"
                android:clickable="true"
                android:contentDescription="@string/none"
                android:focusable="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/camera" />

            <!--android:onClick="takePhoto"-->

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/none" />

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/shape_selector"
                android:padding="10dp"
                android:text="@string/sikum_azmana"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
