<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInfo0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/contact_us"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/contact_text"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo0" />

    <ImageButton
        android:id="@+id/btnCall"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/call"
        app:layout_constraintEnd_toStartOf="@+id/btnDial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo1"
        android:contentDescription="@string/none" />

    <ImageButton
        android:id="@+id/btnDial"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCall"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo1"
        android:contentDescription="@string/none" />

    <ImageButton
        android:id="@+id/btnSMS"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/sms"
        app:layout_constraintEnd_toStartOf="@+id/btnEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCall"
        android:contentDescription="@string/none" />

    <ImageButton
        android:id="@+id/btnEmail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSMS"
        app:layout_constraintTop_toBottomOf="@+id/btnDial"
        android:contentDescription="@string/none" />

    <ImageButton
        android:id="@+id/btnWhatsApp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:padding="20dp"
        android:src="@drawable/whatsapp_icon"
        app:layout_constraintEnd_toStartOf="@+id/btnAddContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSMS"
        android:contentDescription="@string/none" />

    <ImageButton
        android:id="@+id/btnAddContact"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_selector"
        android:scaleType="fitXY"
        android:src="@drawable/add_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnWhatsApp"
        app:layout_constraintTop_toBottomOf="@+id/btnEmail"
        android:contentDescription="@string/none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:text="@string/addContact"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWhatsApp" />

    <ImageView
        android:id="@+id/ivTheGalos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.4"
        android:contentDescription="@string/none"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/galos_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>



